# mingraphlib

./: .gitignore  CMakeLists.txt
include/: coordinate.h  edge.h  graph.h  node.h
src/: edge.cpp  graph.cpp  node.cpp
