cmake_minimum_required(VERSION 3.10)

# set the project name
project(MinGraphLib VERSION 1.0)

# specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)


file(GLOB mingraphlib_SRC src/*.cpp)

include_directories(include)

add_executable(MinGraphLib ${mingraphlib_SRC})